Fixed bug on small screen resolution the latest update

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ input[type=button]:hover {
 strike {
     font-size: 3rem;
 }
-@media(max-width:460px)
+@media(max-width:800px)
 {
     .element {
         border-bottom: 0.5rem solid white;
